--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "solidity-coverage": "^0.7.21"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
     "dotenv": "^16.0.0"
   }
 }
